--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Xournal - experimental version that removes dependency of gnome-canvas
+Xournal - experimental version exploring a Gnome 3 interface
 
-See also: http://sourceforge.net/projects/xournal
+For upstream xournal, see: http://sourceforge.net/projects/xournal
